--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.3.3",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "jsdo": "git://github.com/rwdroge/JSDO.git#master"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.0",
