--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
+    "@progress/kendo-angular-buttons": "^0.20.4",
+    "@progress/kendo-angular-grid": "^0.19.3",
+    "@progress/kendo-angular-intl": "^0.11.0",
+    "@progress/kendo-angular-l10n": "^0.2.0",
+    "@progress/kendo-data-query": "^0.3.6",
+    "@progress/kendo-theme-default": "^2.12.39",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jsdo": "git://github.com/rwdroge/JSDO.git#master",
     "ng2-bootstrap": "^1.3.3",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6",
-    "jsdo": "git://github.com/rwdroge/JSDO.git#master"
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.0",
@@ -38,10 +44,12 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "node-sass": "^4.5.0",
     "protractor": "~5.1.0",
+    "sass-loader": "^6.0.3",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
     "typescript": "~2.0.0"
