--- a/package.json
+++ b/package.json
@@ -12,46 +12,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
-    "@progress/kendo-angular-buttons": "^0.20.4",
-    "@progress/kendo-angular-grid": "^0.19.3",
-    "@progress/kendo-angular-intl": "^0.11.0",
-    "@progress/kendo-angular-l10n": "^0.2.0",
-    "@progress/kendo-data-query": "^0.3.6",
-    "@progress/kendo-theme-default": "^2.12.39",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
-    "jsdo": "git://github.com/rwdroge/JSDO.git#master",
-    "ng2-bootstrap": "^1.3.3",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "@angular/animations": "^6.1.7",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/forms": "^6.1.7",
+    "@angular/http": "^6.1.7",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/router": "^6.1.7",
+    "@progress/jsdo-angular": "^5.0.0",
+    "@progress/kendo-angular-buttons": "^4.1.3",
+    "@progress/kendo-angular-dateinputs": "^3.4.4",
+    "@progress/kendo-angular-dropdowns": "^3.0.3",
+    "@progress/kendo-angular-excel-export": "^2.1.2",
+    "@progress/kendo-angular-grid": "^3.7.1",
+    "@progress/kendo-angular-inputs": "^3.2.1",
+    "@progress/kendo-angular-intl": "^1.5.0",
+    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-data-query": "^1.5.0",
+    "@progress/kendo-drawing": "^1.5.7",
+    "@progress/kendo-theme-default": "^2.56.0",
+    "bootstrap": "^4.1.3",
+    "core-js": "^2.5.7",
+    "jquery": "^3.3.1",
+    "kinvey-angular-sdk": "^3.11.6",
+    "kinvey-angular2-sdk": "^3.11.6",
+    "ng2-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^3.0.1",
+    "popper.js": "^1.14.4",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
+    "webpack": "^4.19.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.0",
-    "@angular/compiler-cli": "^2.4.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "6.2.2",
+    "@angular/compiler-cli": "^6.1.7",
+    "@types/jasmine": "2.8.8",
+    "@types/node": "~10.10.1",
+    "codelyzer": "~4.4.4",
+    "jasmine-core": "~3.2.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.5.0",
-    "protractor": "~5.1.0",
-    "sass-loader": "^6.0.3",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.4.2",
-    "typescript": "~2.0.0"
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
+    "node-sass": "^4.9.3",
+    "protractor": "~5.4.1",
+    "sass-loader": "^7.1.0",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "^2.7.2"
   }
 }
