--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
+      "dom",
       "es2016"
-    ]
+    ],
+    "module": "es2015",
+    "baseUrl": "./"
   }
 }
