--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@progress/kendo-angular-grid": "^3.7.1",
     "@progress/kendo-angular-inputs": "^3.2.1",
     "@progress/kendo-angular-intl": "^1.5.0",
-    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-angular-l10n": "^1.1.0",
+    "@progress/kendo-angular-layout": "^3.1.2",
     "@progress/kendo-data-query": "^1.5.0",
     "@progress/kendo-drawing": "^1.5.7",
-    "@progress/kendo-theme-default": "^2.56.0",
+    "@progress/kendo-theme-default": "latest",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "jquery": "^3.3.1",
@@ -42,7 +43,7 @@
     "ngx-bootstrap": "^3.0.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.2",
-    "rxjs-compat": "^6.3.2",
+    "rxjs-compat": "^6.0.0",
     "webpack": "^4.19.1",
     "zone.js": "^0.8.26"
   },
