--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/forms": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
-    "@angular/router": "^6.1.7",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@progress/jsdo-angular": "^5.0.0",
-    "@progress/kendo-angular-buttons": "^4.1.3",
-    "@progress/kendo-angular-dateinputs": "^3.4.4",
-    "@progress/kendo-angular-dropdowns": "^3.0.3",
-    "@progress/kendo-angular-excel-export": "^2.1.2",
-    "@progress/kendo-angular-grid": "^3.7.1",
-    "@progress/kendo-angular-inputs": "^3.2.1",
-    "@progress/kendo-angular-intl": "^1.5.0",
-    "@progress/kendo-angular-l10n": "^1.1.0",
-    "@progress/kendo-angular-layout": "^3.1.2",
+    "@progress/kendo-angular-buttons": "^4.3.2",
+    "@progress/kendo-angular-dateinputs": "^3.5.3",
+    "@progress/kendo-angular-dropdowns": "^3.4.2",
+    "@progress/kendo-angular-excel-export": "^2.2.0",
+    "@progress/kendo-angular-grid": "^3.10.2",
+    "@progress/kendo-angular-inputs": "^3.5.0",
+    "@progress/kendo-angular-intl": "^1.6.1",
+    "@progress/kendo-angular-l10n": "^1.3.0",
+    "@progress/kendo-angular-layout": "^3.2.0",
     "@progress/kendo-data-query": "^1.5.0",
     "@progress/kendo-drawing": "^1.5.7",
     "@progress/kendo-theme-default": "latest",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.7",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.6.2",
     "jquery": "^3.3.1",
-    "kinvey-angular-sdk": "^3.11.6",
-    "kinvey-angular2-sdk": "^3.11.6",
+    "kinvey-angular-sdk": "^3.12.3",
+    "kinvey-angular2-sdk": "^3.12.3",
     "ng2-bootstrap": "^1.6.3",
-    "ngx-bootstrap": "^3.0.1",
-    "popper.js": "^1.14.4",
-    "rxjs": "^6.3.2",
-    "rxjs-compat": "^6.0.0",
-    "webpack": "^4.19.1",
+    "ngx-bootstrap": "^3.1.4",
+    "popper.js": "^1.14.6",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "webpack": "^4.28.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "^0.8.9",
     "@angular/cli": "6.2.2",
-    "@angular/compiler-cli": "^6.1.7",
+    "@angular/compiler-cli": "^6.1.10",
     "@types/jasmine": "2.8.8",
-    "@types/node": "~10.10.1",
+    "@types/node": "^10.10.3",
     "codelyzer": "~4.4.4",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -61,12 +61,12 @@
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "node-sass": "^4.9.3",
-    "protractor": "~5.4.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "node-sass": "^4.11.0",
+    "protractor": "^5.4.2",
     "sass-loader": "^7.1.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "^2.7.2"
+    "typescript": "^2.9.2"
   }
 }
